--- a/index.html
+++ b/index.html
@@ -6,51 +6,72 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./scss/main.css">
-    <title>BRAVE</title>
+    <title>BRAVE - INICIO</title>
     
 </head>
     <body class="text-center d-flex justify-content-center">
         <main class="form-signin ">
-          <form class="form-main ">
-            <div class="d-flex flex-column align-items-center ">
-                <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="70" height="57">
-                <h1 class="mb-3">BRAVE</h1>
-            </div>
-            <h6 class="mb-3" id="valor">Ingresa un monto para calcular los impuestos</h6>
-            <div class="form-floating mb-2">
-              <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
-              <label for="floatingInput">$</label>
-            </div>
-            <div class="d-flex justify-content-between mt-3">
-                <p>Cotización dólar oficial</p>
-                <strong><p>$186</p></strong>
-            </div>
-            <hr>
-            <div class="d-flex justify-content-between">
-                <p>Sin impuestos</p>
-                <strong><p>$0</p></strong>
-            </div>
-            <div class="d-flex justify-content-between">
-                <p>+ Imp. PAIS (30%)</p>
-                <strong><p>$0</p></strong>
-            </div>
-            <div class="d-flex justify-content-between">
-                <p>+ Imp. ganancias (45%)</p>
-                <strong><p>$0</p></strong>
-            </div>
-            <hr>
-            <div class="d-flex justify-content-between">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    + Imp. Dólar Qatar (25%)
-                </label>
-                <strong><p>0</p></strong>
-              </div>
-            <hr>
-            <div class="d-flex justify-content-evenly">
-                <p>Total c/ imp.</p>
-                <strong><p>$186</p></strong>
-            </div>
+            <form class="form-main ">
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">IMPUESTOS</button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">IVA</button>
+                  </li>
+                  <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">HISTORIAL (IVA)</button>
+                  </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                  <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                    <div class="content">
+                        <div class="d-flex flex-column align-items-center ">
+                            <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="70" height="57">
+                            <h1 class="mb-3">BRAVE</h1>
+                        </div>
+                        <h6 class="mb-3" >Ingresa un monto para calcular los impuestos</h6>
+                        <div class="form-floating mb-2">
+                            <input type="number" class="form-control"  placeholder="name@example.com">
+                            <label for="valor">$</label>
+                        </div>
+               
+                        <div class="d-flex justify-content-between mt-3">
+                            <p>Cotización dólar oficial</p>
+                            <strong><p>$186</p></strong>
+                        </div>
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <p>Sin impuestos</p>
+                            <strong><p>$0</p></strong>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p>+ Imp. PAIS (30%)</p>
+                            <strong><p>$0</p></strong>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p>+ Imp. ganancias (45%)</p>
+                            <strong><p>$0</p></strong>
+                        </div>
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                + Imp. Dólar Qatar (25%)
+                            </label>
+                            <strong><p>0</p></strong>
+                          </div>
+                        <hr>
+                        <div class="d-flex justify-content-evenly">
+                            <p>Total c/ imp.</p>
+                            <strong><p>$186</p></strong>
+                        </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">..ffff</div>
+                  <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">..rrr.</div>
+                  <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">..ccc.</div>
+                </div>
           </form>
         </main>        
     </body>
