--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     
 </head>
     <body class="text-center d-flex justify-content-center">
-        <main class="form-signin ">
+        <main class="form-signin w-auto">
             <form class="form-main ">
-              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <ul class="nav nav-tabs d-flex tab-style justify-content-center " id="myTab" role="tablist">
                   <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">IMPUESTOS</button>
                   </li>
@@ -20,7 +20,7 @@
                     <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">IVA</button>
                   </li>
                   <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">HISTORIAL (IVA)</button>
+                    <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">HISTORIAL</button>
                   </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
@@ -31,46 +31,72 @@
                             <h1 class="mb-3">BRAVE</h1>
                         </div>
                         <h6 class="mb-3" >Ingresa un monto para calcular los impuestos</h6>
-                        <div class="form-floating mb-2">
-                            <input type="number" class="form-control"  placeholder="name@example.com">
-                            <label for="valor">$</label>
+                        <div class="input-group mb-3">
+                          <input id="calculador" type="text" class="form-control" placeholder="" aria-label="Example text with two button addons">
                         </div>
-               
                         <div class="d-flex justify-content-between mt-3">
-                            <p>Cotización dólar oficial</p>
-                            <strong><p>$186</p></strong>
+                          <p>Cotización dólar oficial</p>
+                          <strong><div id="inputDolarOficial" >$186</div></strong>
                         </div>
                         <hr>
                         <div class="d-flex justify-content-between">
-                            <p>Sin impuestos</p>
-                            <strong><p>$0</p></strong>
+                          <p>Sin impuestos</p>
+                          <strong><div id="inputSinImpuestos" >$0</div></strong>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <p>+ Imp. PAIS (30%)</p>
-                            <strong><p>$0</p></strong>
+                          <p>+ Imp. PAIS (30%)</p>
+                          <strong><div id="inputIMP-pais" >$0</div></strong>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <p>+ Imp. ganancias (45%)</p>
-                            <strong><p>$0</p></strong>
-                        </div>
-                        <hr>
-                        <div class="d-flex justify-content-between">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                + Imp. Dólar Qatar (25%)
-                            </label>
-                            <strong><p>0</p></strong>
+                          <p>+ Imp. ganancias (45%)</p>
+                            <strong><div id="inputIMP-ganancia" >$0</div></strong>
                           </div>
-                        <hr>
-                        <div class="d-flex justify-content-evenly">
-                            <p>Total c/ imp.</p>
-                            <strong><p>$186</p></strong>
+                          <hr>
+                        <div class="d-flex justify-content-between">
+                          <input class="form-check-input" type="checkbox" value="" id="flexCheck">
+                          <label class="form-check-label" for="flexCheckDefault">
+                            + Imp. Dólar Qatar (25%)
+                          </label>
+                          <strong><div id="inputQatar" >0</div></strong>
                         </div>
+                        <hr>
+                        <div class="d-flex justify-content-evenly mb-2 ">
+                          <p>Total c/ imp.</p>
+                          <strong><div id="totalCimp" >$0</div></strong>
+                        </div>
+                      </div>
                     </div>
+                  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                    <div class="content">
+                      <div class="d-flex flex-column align-items-center ">
+                          <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="70" height="57">
+                          <h1 class="mb-3">BRAVE</h1>
+                      </div>
+                      <h6 class="mb-3" >Ingrese un producto para calcular el IVA</h6>
+                      <div class="row">
+                        <div class="col">
+                          <input type="text" id="nombreProducto" class="form-control" placeholder="Producto" aria-label="Producto">
+                        </div>
+                        <div class="col">
+                          <input type="number" id="nombrePrecio" class="form-control" placeholder="Precio" aria-label="Precio">
+                        </div>
+                      </div>
+                      <div class="container mt-2">
+                        <button type="button" id="btn-agregarProducto" class="btn btn-dark" type="button">Calcular</button>
+                      </div>
                   </div>
-                  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">..ffff</div>
-                  <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">..rrr.</div>
-                  <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">..ccc.</div>
+                  </div>
+                  <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                    <div class="content-historial">
+                      <div class="d-flex flex-column align-items-center ">
+                        <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="70" height="57">
+                        <h1 class="mb-3">BRAVE</h1>
+                      </div>
+                      <div id="container">
+                        <button type="button" id="btn-historial" class="btn rrr mb-3" >VER HISTORIAL (IVA)</button>
+                      </div>
+                    <div class="container"  id="historial-btn">
+                  </div>
                 </div>
           </form>
         </main>        
