--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
                     <div class="content">
                       <div class="d-flex flex-column align-items-center ">
-                          <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="70" height="57">
+                          <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="100">
                           <h1 class="mb-3">BRAVE</h1>
                       </div>
                       <h6 class="mb-3" >Ingrese un producto para calcular el IVA</h6>
@@ -92,7 +92,7 @@
                   <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
                     <div class="content-historial">
                       <div class="d-flex flex-column align-items-center ">
-                        <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="70" height="57">
+                        <img class="mb-2" src="./media/FONDO NEGRO.png" alt="" width="100">
                         <h1 class="mb-3">BRAVE</h1>
                       </div>
                       <div id="container">
